# pytest-data-suites

./: .gitignore  README.md  pyproject.toml  tox.ini
src/pytest_data_suites/: __init__.py  suite.py  utils.py  version.py
tests/: cases.py  test_data_suites.py  test_utils.py
