[tool.poetry]
name = "pytest-data-suites"
version = "1.0.0"
description = "Class-based pytest parametrization"
license = "MIT"
authors = [
    "Artem Novikov <artnew@list.ru>",
]
readme = "README.md"
repository = "https://github.com/reartnew/pytest-data-suites"
classifiers = [
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "*"

[tool.poetry.dev-dependencies]
pytest-pylint = "*"
pylint-quotes = "*"
pytest-ordering = "*"
pytest-mypy = "*"
pytest-black = "*"
pytest-bandit = "*"
tox-poetry = "*"

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]
addopts = """
--pylint
--mypy
--black
--bandit
"""
bandit_targets = ["src"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39
isolated_build = True

[testenv]
commands =
  pytest
"""
