[tool.poetry]
name = "pytest-data-suites"
version = "1.0.5"
description = "Class-based pytest parametrization"
license = "MIT"
authors = [
    "Artem Novikov <artnew@list.ru>",
]
readme = "README.md"
repository = "https://github.com/reartnew/pytest-data-suites"
classifiers = [
    "Topic :: Software Development :: Testing",
    "Framework :: Pytest",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=6.0, <9.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
pytest-pylint = "^0.21.0"
pytest-ordering = "^0.6"
pytest-mypy = "^0.10.3"
pytest-black = "^0.3.12"
pytest-bandit = "^0.6.1"
tox = "^4.14.2"
setuptools = "^69.2.0"

[tool.pytest.ini_options]
testpaths = [
    "src",
    "tests",
]
addopts = """
--pylint
--mypy
--black
--bandit
"""
bandit_targets = ["src"]

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
